--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -22,12 +22,70 @@
 			</p:layoutUnit>
 
 			<p:layoutUnit position="center" header="Usuário">
-				<h:form>
+				<h:form id="formPesquisa">
+					<p:growl id="growlPesquisa" autoUpdate="true" />
+
 					<h2>Listar Usuários</h2>
 					<p:separator />
+
+					<h:panelGrid cellpadding="5" columns="3">
+						<h:panelGrid>
+							<p:outputLabel for="nomePesquisaInputText" value="Nome" />
+							<p:inputText id="nomePesquisaInputText" size="45"
+								value="#{usuarioBean.namePesquisaParameter}"
+								placeholder="Nome do usuário" />
+						</h:panelGrid>
+
+						<h:panelGrid>
+							<p:outputLabel for="cpfPesquisaInputText" value="CPF" />
+							<p:inputText id="cpfPesquisaInputText"
+								value="#{usuarioBean.cpfPesquisaParameter}"
+								placeholder="CPF do usuário" />
+						</h:panelGrid>
+
+						<h:panelGrid cellspacing="0">
+							<p:spacer />
+							<p:commandButton value="Pesquisar"
+								actionListener="#{usuarioBean.pesquisar}" update="@form" />
+						</h:panelGrid>
+					</h:panelGrid>
+					<h:panelGrid cellpadding="5">
+						<p:dataTable id="usuariosPesquisaDataTable" var="usr"
+							value="#{usuarioBean.usuariosPesquisa}"
+							emptyMessage="Nenhum usuário...">
+
+							<p:column headerText="ID">
+								<h:outputText value="#{usr.id}" />
+							</p:column>
+
+							<p:column headerText="Nome">
+								<h:outputText value="#{usr.name}" />
+							</p:column>
+
+							<p:column headerText="CPF">
+								<h:outputText value="#{usr.cpf}" />
+							</p:column>
+
+							<p:column headerText="Perfil">
+								<h:outputText value="#{usr.perfil}" />
+							</p:column>
+
+							<p:column headerText="Editar">
+								<div align="center">
+									<p:commandLink actionListener="#{usuarioBean.editar(usr)}"
+										update="@parent, @this, :formCadastro">
+
+										<p:graphicImage
+											url="https://s3-us-west-2.amazonaws.com/educservicebucket/images/edit.png"
+											width="20" height="20" />
+									</p:commandLink>
+								</div>
+							</p:column>
+						</p:dataTable>
+					</h:panelGrid>
 				</h:form>
 
-				<h:form>
+				<h:form id="formCadastro">
 					<p:growl id="growl" autoUpdate="true" />
 
 					<h2>Cadastrar Usuário</h2>
@@ -127,7 +185,20 @@
 										</p:column>
 
 										<p:column headerText="Excluir">
+											<div align="center">
+												<p:commandLink
+													actionListener="#{usuarioBean.excluirTelefone(telefone)}"
+													update="@this, telefonesDataTable" process="@this">
 
+													<p:graphicImage
+														url="https://s3-us-west-2.amazonaws.com/educservicebucket/images/edit.png"
+														width="20" height="20" />
+
+													<p:confirm header="Confirmação"
+														message="Tem certeza que deseja remover o telefone?"
+														icon="ui-icon-alert" />
+												</p:commandLink>
+											</div>
 										</p:column>
 									</p:dataTable>
 								</p:outputPanel>
@@ -156,8 +227,16 @@
 						</h:panelGrid>
 
 						<p:commandButton value="Salvar"
-							actionListener="#{usuarioBean.salvar}" update="@form" />
+							actionListener="#{usuarioBean.salvar}"
+							update="@form, :formPesquisa" />
 					</h:panelGrid>
+
+					<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+						<p:commandButton value="Sim" type="button"
+							styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+						<p:commandButton value="Não" type="button"
+							styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+					</p:confirmDialog>
 				</h:form>
 			</p:layoutUnit>
 		</p:layout>
